fixed header and footer on 2 html. added home button. fixed styling on submenu. fixed submenu on mobile version.

--- a/styles/header-footer.css
+++ b/styles/header-footer.css
@@ -55,6 +55,8 @@ header {
 }
 
 .submenu {
+    border: 1px solid black;
+    border-radius: 3px;
     display: none;
     position: absolute;
     top: 100%;
